[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
http = "0.2"
async-graphql = "3.0.34"
async-graphql-warp = "3.0.34"
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
serde_json = { version = "1.0" }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 